[package]
name = "ops"
version = "0.4.0"
edition = "2024"

[dependencies]
aws-config = "1"
aws-sdk-ssm = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
anyhow = "1.0.98"
serde_yaml = "0.9.34"
serde = { version = "1.0.219", features = ["derive"] }
itertools = "0.14.0"
tempfile = "3.20.0"
